Bug 361791 - Unnecessary signed-unsigned casts, warnings in xpidl_util.c.  r=timeless, sr=darin